// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Tabs.Item checkGrammar 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkGrammar 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkGrammar 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkGrammar 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkHighlight 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkHighlight 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkHighlight 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkHighlight 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkSpaces 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkSpaces 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkSpaces 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item checkSpaces 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item className 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 5`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 6`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 7`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 8`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 9`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 10`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 11`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 12`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 13`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 14`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 15`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 16`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 17`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 18`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 19`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 20`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 21`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 22`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 23`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 24`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 25`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 26`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 27`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 28`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 29`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 30`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 31`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 32`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 33`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 34`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 35`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 36`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 37`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item colorSchema 38`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item content 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Tabs.Item content 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Tabs.Item content 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Tabs.Item content 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Tabs.Item controlled 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item controlled 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item controlled 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item controlled 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item default props 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item disabled 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Tabs.Item disabled 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item disabled 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item disabled 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Tabs.Item docKit examples UU5.Bricks.Tabs.Item should render without crash 1`] = `
<div
  className="uu5-bricks-tabs uu5-bricks-tabs-list-size-m"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <ul
    className="uu5-bricks-tabs-list uu5-bricks-tabs-list-tabs"
  >
    <li
      className="uu5-bricks-tabs-list-active"
      key="0"
    >
      <Button
        baseline={false}
        bgStyle="transparent"
        borderRadius={null}
        className={null}
        colorSchema={null}
        content="Tab 1"
        controlled={true}
        disabled={false}
        displayBlock={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        href={null}
        id={null}
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        offset={0}
        onClick={null}
        pressed={false}
        pureRender={false}
        ref_={[Function]}
        selected={false}
        size="m"
        smoothScroll={1000}
        style={null}
        target="_self"
        tooltip={null}
      />
    </li>
    <li
      key="1"
    >
      <Button
        baseline={false}
        bgStyle="transparent"
        borderRadius={null}
        className={null}
        colorSchema={null}
        content="Tab 2"
        controlled={true}
        disabled={false}
        displayBlock={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        href={null}
        id={null}
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        offset={0}
        onClick={[Function]}
        pressed={false}
        pureRender={false}
        ref_={[Function]}
        selected={false}
        size="m"
        smoothScroll={1000}
        style={null}
        target="_self"
        tooltip={null}
      />
    </li>
    <li
      key="2"
    >
      <Button
        baseline={false}
        bgStyle="transparent"
        borderRadius={null}
        className={null}
        colorSchema={null}
        content="Tab 3"
        controlled={true}
        disabled={false}
        displayBlock={false}
        dynamic={false}
        elevation={null}
        elevationHover={null}
        hidden={false}
        href={null}
        id={null}
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        offset={0}
        onClick={[Function]}
        pressed={false}
        pureRender={false}
        ref_={[Function]}
        selected={false}
        size="m"
        smoothScroll={1000}
        style={null}
        target="_self"
        tooltip={null}
      />
    </li>
    <Line
      borderRadius={null}
      className={null}
      colorSchema="custom"
      controlled={true}
      disabled={false}
      hidden={false}
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      size="1px"
      style={null}
      tooltip={null}
      vertical={false}
    />
  </ul>
  <div
    className="uu5-bricks-tabs-list-content"
  >
    <tabs-item
      _active={true}
      _fade={true}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      footer={null}
      getButton={[Function]}
      header="Tab 1"
      hidden={false}
      id="uuID"
      ignoreInnerHTML={false}
      key="uuID"
      level={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
      underline={false}
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Class aptent taciti sociosqu ad litora
    </tabs-item>
    <tabs-item
      _active={false}
      _fade={true}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      footer={null}
      getButton={[Function]}
      header="Tab 2"
      hidden={false}
      id="uuID2"
      ignoreInnerHTML={false}
      key="uuID2"
      level={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
      underline={false}
    >
      torquent per conubia nostra, per inceptos hymenaeos. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est.
    </tabs-item>
    <tabs-item
      _active={false}
      _fade={true}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      footer={null}
      getButton={[Function]}
      header="Tab 3"
      hidden={false}
      id="uuID3"
      ignoreInnerHTML={false}
      key="uuID3"
      level={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
      underline={false}
    >
      torquent per conubia nostra, per inceptos hymenaeos. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. torquent per conubia nostra, per inceptos hymenaeos. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est.
    </tabs-item>
  </div>
</div>
`;

exports[`UU5.Bricks.Tabs.Item dynamic 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item dynamic 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item dynamic 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item dynamic 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item footer 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item header 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item hidden 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item hidden 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item hidden 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item hidden 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item id 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item ignoreHTML 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item ignoreHTML 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item ignoreHTML 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item ignoreHTML 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 5`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 6`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 7`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 8`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 9`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 10`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 11`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 12`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 13`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 14`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 15`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 16`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 17`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 18`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 19`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 20`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 21`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 22`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 23`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 24`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 25`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 26`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 27`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item level 28`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item mainAttrs 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item name 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item name 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  name="Summer"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 5`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 6`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 7`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 8`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 9`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 10`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 11`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 12`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 13`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 14`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 15`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 16`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 17`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 18`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Tabs.Item nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Tabs.Item noIndex 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item noIndex 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item noIndex 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item noIndex 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item pureRender 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item pureRender 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item pureRender 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item pureRender 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item selected 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item selected 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item selected 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item selected 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item style 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item style 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item style 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item style 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item textCorrector 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item textCorrector 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item textCorrector 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item textCorrector 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item tooltip 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;

exports[`UU5.Bricks.Tabs.Item underline 1`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item underline 2`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item underline 3`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Tabs.Item underline 4`] = `
<div
  className="uu5-bricks-tabs-item uu5-bricks-tabs-item-pane"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;
